# autovec-db

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  common.hpp  compressed_scan.cpp  hash_bucket.cpp  hashing.cpp
.github/workflows/: build.yml  build_run.yml  clang-format.yml  clang-tidy.yml
benchmarks/: common.hpp  compare_to_bitmask.cpp  compressed_scan.cpp  dictionary_scan.cpp  hash_bucket.cpp  hashing.cpp  llvm_bitmask.cpp  simd.hpp
eval/: .gitignore  README.md  all_plots.sh  patched_dictionary_scan.csv  requirements.txt
eval/results/: compare_to_bitmask_m1.csv  compare_to_bitmask_x86.csv  compare_to_bitmask_x86_cascadelake.csv  compare_to_bitmask_x86_icelake.csv  compare_to_bitmask_x86_rome.csv  compare_to_bitmask_x86_skylake.csv  compressed_scan_m1.csv  compressed_scan_x86.csv  compressed_scan_x86_cascadelake.csv  compressed_scan_x86_icelake.csv  compressed_scan_x86_rome.csv  compressed_scan_x86_skylake.csv  dictionary_scan_m1.csv  dictionary_scan_m1_patched.csv  dictionary_scan_x86.csv  dictionary_scan_x86_cascadelake.csv  dictionary_scan_x86_icelake.csv  dictionary_scan_x86_rome.csv  dictionary_scan_x86_skylake.csv  dump.csv  hash_bucket_m1.csv  hash_bucket_x86_cascadelake.csv  hash_bucket_x86_icelake.csv  hash_bucket_x86_rome.csv  hash_bucket_x86_skylake.csv  hashing_m1.csv  hashing_x86.csv  hashing_x86_cascadelake.csv  hashing_x86_icelake.csv  hashing_x86_rome.csv  hashing_x86_skylake.csv  velox_compiler_simd_tpch_sf1_m1.csv  velox_compiler_simd_tpch_sf1_m1_32byte.csv  velox_compiler_simd_tpch_sf1_x86.csv  velox_compiler_simd_tpch_sf1_x86_cascadelake.csv  velox_xsimd_tpch_sf1_m1.csv  velox_xsimd_tpch_sf1_x86.csv  velox_xsimd_tpch_sf1_x86_cascadelake.csv
eval/results-gcc/cascadelake/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results-gcc/graviton2/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results-gcc/graviton3/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results-gcc/icelake/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results-gcc/m1/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results-gcc/rome/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results-gcc/skylake/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/cascadelake/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/graviton2/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/graviton3/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/icelake/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/m1/: compressed_scan.csv  dictionary_scan.csv  dictionary_scan_patched_bitmask_only.csv  dictionary_scan_unpatched.csv  hash_bucket.csv  hash_bucket_unpatched.csv  hashing.csv
eval/results/pi/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/rome/: compare_to_bitmask.csv  compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/skylake/: compressed_scan.csv  dictionary_scan.csv  hash_bucket.csv  hashing.csv
eval/results/velox/: README.md
eval/results/velox/cascadelake/: velox_compiler_march-native_mtune-native.csv  velox_compiler_march-skylake512_mtune-native.csv  velox_compiler_mtune-native.csv  velox_xsimd.csv  velox_xsimd_march-native_mtune-native.csv
eval/results/velox/cascadelake/sf1/: 10x_consistent_autovec_march-native_mtune-native.csv  10x_consistent_compiler_vec_march-native_mtune-native.csv  10x_consistent_novec.csv  10x_consistent_novec_mtune-native.csv  10x_consistent_xsimd.csv  velox_autovec.csv  velox_autovec_mtune-native.csv  velox_compiler.csv  velox_compiler_march-native_mtune-native.csv  velox_compiler_march-skylake512_mtune-native.csv  velox_compiler_mtune-native.csv  velox_novec_march-native_mtune-native.csv  velox_xsimd.csv  velox_xsimd_march-native_mtune-native.csv  velox_xsimd_march-skylake512_mtune-native.csv  velox_xsimd_mtune-native.csv
eval/results/velox/cascadelake/sf10/: velox_compiler.csv  velox_compiler_sf10.csv  velox_xsimd.csv  velox_xsimd_sf10.csv
eval/results/velox/icelake/: velox_compiler.csv  velox_compiler_march-native_mtune-native.csv  velox_compiler_march-skylake512_mtune-native.csv  velox_compiler_mtune-native.csv  velox_xsimd.csv  velox_xsimd_march-native_mtune-native.csv  velox_xsimd_march-skylake512_mtune-native.csv  velox_xsimd_mtune-native.csv
eval/results/velox/icelake/sf1/: 10x_consistent_compiler_vec.csv  10x_consistent_compiler_vec_march-native_mtune-native.csv  10x_consistent_novec_march-native_mtune-native.csv  10x_consistent_xsimd.csv  10x_consistent_xsimd_march-native_mtune-native.csv  velox_autovec.csv  velox_autovec_march-native_mtune-native.csv  velox_autovec_mtune-native.csv  velox_compiler.csv  velox_compiler_march-native_mtune-native.csv  velox_compiler_march-skylake512_mtune-native.csv  velox_compiler_mtune-native.csv  velox_compiler_padding_march-native_mtune-native.csv  velox_novec.csv  velox_novec_mtune-native.csv  velox_xsimd.csv  velox_xsimd_march-native_mtune-native.csv  velox_xsimd_march-skylake512_mtune-native.csv  velox_xsimd_mtune-native.csv
eval/results/velox/m1/: velox_compiler.csv  velox_xsimd.csv
eval/results/velox/m1/sf1/: velox_compiler.csv  velox_compiler_patched.csv  velox_novec.csv  velox_novec_patched.csv  velox_xsimd.csv  velox_xsimd_patched.csv
eval/results/velox/m1/sf10/: velox_compiler.csv  velox_xsimd.csv
eval/scripts/: all_systems_table.py  common.py  compare_to_bitmask.py  compressed_scan.py  dictionary_scan.py  diff.py  gcc_table.py  hash_bucket.py  hashing.py  velox_out_to_csv.py  velox_tpch.py
scripts/: clang-tidy.sh  docker_compile_and_run.sh  docker_entrypoint.sh  format.sh  run_velox_benchmarks.sh
